--- a/src/app/admin-page/admin-page.component.css
+++ b/src/app/admin-page/admin-page.component.css
@@ -1,5 +1,7 @@
-table, th, td {
-  border: 1px solid grey;
-  border-collapse: collapse;
-  padding: 8px;
+table,
+th,
+td {
+    border: 1px solid grey;
+    border-collapse: collapse;
+    padding: 8px;
 }
