--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -1,5 +1,6 @@
 
-  <table class="users">
+<div class="scrollit">
+  <table class="table">
     <thead>
       <tr>
         <th *ngFor="let head of headElements" scope="col">{{head}} </th>
@@ -49,5 +50,6 @@
       </tr>
     </tbody>
   </table>
+</div>
 
 
