--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -41,7 +41,7 @@
                     <td>{{form.payload.doc.data().countryTwo}}</td>
                     <td>{{form.payload.doc.data().ChurchLocation}}</td>
                     <td>{{form.payload.doc.data().attendanceLength}}</td>
-                    <td>{{form.payload.doc.data().statementPurpose}}</td>
+                    <td style="word-wrap:break-word">{{form.payload.doc.data().statementPurpose}}</td>
                     <td>{{form.payload.doc.data().internetAccess}}</td>
                     <td>{{form.payload.doc.data().refferencePoint}}</td>
                     <td>{{form.payload.doc.data().anyoneStudyingNow}}</td>
