--- a/src/app/admin-page/admin-page.component.css
+++ b/src/app/admin-page/admin-page.component.css
@@ -4,14 +4,16 @@
 
 table {
   table-layout: auto;
-  width: 100px;
-  white-space: nowrap;
+  width: 300px;
+  /* white-space: nowrap; */
   height: auto;
   margin-left: auto;
   margin-right: auto;
  
 }
 .table td {
+  word-wrap: break-word;
+  /* max-width: 200px; */
 }
 
 .table th {
