--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -2,7 +2,14 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-lg-12">
-        <div class="card col-md-10 offset-md-1 mt-5">
+        <div class="col-md-10 offset-md-1 mt-5">
+          <img width="200" src="https://uploads-ssl.webflow.com/60bff710e77176241e15c3c1/60c8f814ed88d90b5ba38de9_logo.svg" alt="">
+          <h1 class="h1 mt-4 mb-4">Admin Panel</h1>
+          <p class="lead">This page contains all WDCTS Application Form submissions.</p>
+          <p>Application form can be found <a href="https://www.dcseminary.org/admissions/apply-now">here</a>.</p>
+          <p>This page contains submissions from both English and Spanish application forms.</p>
+        </div>
+        <div class="card col-md-10 offset-md-1 my-5">
           <div class="card-body">
             <div class="scrollit">
               <table class="table table-centered datatable dt-responsive nowrap">
@@ -45,9 +52,9 @@
                     <td>{{form.payload.doc.data().internetAccess}}</td>
                     <td>{{form.payload.doc.data().refferencePoint}}</td>
                     <td>{{form.payload.doc.data().anyoneStudyingNow}}</td>
+                    <td>{{form.payload.doc.data().dateSubmitted}}</td>
                     <td>{{form.payload.doc.data().yearsOfBeingABeliever}}</td>
                     <td>{{form.payload.doc.data().countryCitizenship}}</td>
-                    <td>{{form.payload.doc.data().dateSubmitted}}</td>
                     <td>
                       <span *ngFor="let forms of form.payload.doc.data().ztsForms">
                         {{ forms }}
@@ -62,4 +69,6 @@
     </div>  
   </div>  
 </div>
+<div class="socket">
 
+</div>
