table data order fixes

--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -45,10 +45,12 @@
                     <td>{{form.payload.doc.data().addressTwo}}</td>
                     <td>{{form.payload.doc.data().denomination}}</td>
                     <td>{{form.payload.doc.data().ChurchName}}</td>
+                    <td>{{form.payload.doc.data().churchSize}}</td>
+                    <td>{{form.payload.doc.data().churchRole}}</td>
                     <td>{{form.payload.doc.data().countryTwo}}</td>
-                    <td>{{form.payload.doc.data().ChurchLocation}}</td>
-                    <td>{{form.payload.doc.data().attendanceLength}}</td>
                     <td style="width:400px;word-wrap:break-word">{{form.payload.doc.data().statementPurpose}}</td>
+                    <td>{{form.payload.doc.data().attendanceLength}}</td>
+                    <td>{{form.payload.doc.data().ChurchLocation}}</td>
                     <td>{{form.payload.doc.data().internetAccess}}</td>
                     <td>{{form.payload.doc.data().refferencePoint}}</td>
                     <td>{{form.payload.doc.data().anyoneStudyingNow}}</td>
